--- a/Notebook/Final_Project_Init.ipynb
+++ b/Notebook/Final_Project_Init.ipynb
@@ -428,7 +428,223 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "# Create dataframe by continent\n",
+        "africa = ico_all_years[ico_all_years['Continent'] == 'Africa']\n",
+        "asia = ico_all_years[ico_all_years['Continent'] == 'Asia']\n",
+        "northAmerica = ico_all_years[ico_all_years['Continent'] == 'North America']\n",
+        "oceania = ico_all_years[ico_all_years['Continent'] == 'Oceania']\n",
+        "southAmerica = ico_all_years[ico_all_years['Continent'] == 'South America']"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# URL for all flags in ico_all_years dataframe\n",
+        "africa_flags = {\n",
+        "    'Angola': 'https://upload.wikimedia.org/wikipedia/commons/9/9d/Flag_of_Angola.svg',\n",
+        "    'Burundi': 'https://upload.wikimedia.org/wikipedia/commons/5/50/Flag_of_Burundi.svg',\n",
+        "    'Madagascar': 'https://upload.wikimedia.org/wikipedia/commons/b/bc/Flag_of_Madagascar.svg',\n",
+        "    'Malawi': 'https://upload.wikimedia.org/wikipedia/commons/d/d1/Flag_of_Malawi.svg',\n",
+        "    'Rwanda': 'https://upload.wikimedia.org/wikipedia/commons/1/17/Flag_of_Rwanda.svg',\n",
+        "    'Zimbabwe': 'https://upload.wikimedia.org/wikipedia/commons/6/6a/Flag_of_Zimbabwe.svg',\n",
+        "    'Zambia': 'https://upload.wikimedia.org/wikipedia/commons/0/06/Flag_of_Zambia.svg',\n",
+        "    'Benin': 'https://upload.wikimedia.org/wikipedia/commons/0/0a/Flag_of_Benin.svg',\n",
+        "    'Cameroon': 'https://upload.wikimedia.org/wikipedia/commons/4/4f/Flag_of_Cameroon.svg',\n",
+        "    'Central African Republic': 'https://upload.wikimedia.org/wikipedia/commons/6/6f/Flag_of_the_Central_African_Republic.svg',\n",
+        "    'Equatorial Guinea': 'https://upload.wikimedia.org/wikipedia/commons/3/31/Flag_of_Equatorial_Guinea.svg',\n",
+        "    'Ethiopia': 'https://upload.wikimedia.org/wikipedia/commons/7/71/Flag_of_Ethiopia.svg',\n",
+        "    'Gabon': 'https://upload.wikimedia.org/wikipedia/commons/0/04/Flag_of_Gabon.svg',\n",
+        "    'Ghana': 'https://upload.wikimedia.org/wikipedia/commons/1/19/Flag_of_Ghana.svg',\n",
+        "    'Guinea': 'https://upload.wikimedia.org/wikipedia/commons/e/ed/Flag_of_Guinea.svg',\n",
+        "    'Kenya': 'https://upload.wikimedia.org/wikipedia/commons/4/49/Flag_of_Kenya.svg',\n",
+        "    'Liberia': 'https://upload.wikimedia.org/wikipedia/commons/b/b8/Flag_of_Liberia.svg',\n",
+        "    'Nigeria': 'https://upload.wikimedia.org/wikipedia/commons/7/79/Flag_of_Nigeria.svg',\n",
+        "    'Sierra Leone': 'https://upload.wikimedia.org/wikipedia/commons/1/17/Flag_of_Sierra_Leone.svg',\n",
+        "    'Togo': 'https://upload.wikimedia.org/wikipedia/commons/6/68/Flag_of_Togo.svg',\n",
+        "    'Uganda': 'https://upload.wikimedia.org/wikipedia/commons/4/4e/Flag_of_Uganda.svg'\n",
+        "}\n",
+        "\n",
+        "asia_flags = {\n",
+        "    'Indonesia': 'https://upload.wikimedia.org/wikipedia/commons/9/9f/Flag_of_Indonesia.svg',\n",
+        "    'Timor-Leste': 'https://upload.wikimedia.org/wikipedia/commons/2/26/Flag_of_East_Timor.svg',\n",
+        "    'Philippines': 'https://upload.wikimedia.org/wikipedia/commons/9/99/Flag_of_the_Philippines.svg',\n",
+        "    'India': 'https://upload.wikimedia.org/wikipedia/en/4/41/Flag_of_India.svg',\n",
+        "    'Nepal': 'https://upload.wikimedia.org/wikipedia/commons/9/9b/Flag_of_Nepal.svg',\n",
+        "    'Sri Lanka': 'https://upload.wikimedia.org/wikipedia/commons/1/11/Flag_of_Sri_Lanka.svg',\n",
+        "    'Thailand': 'https://upload.wikimedia.org/wikipedia/commons/a/a9/Flag_of_Thailand.svg',\n",
+        "    'Yemen': 'https://upload.wikimedia.org/wikipedia/commons/8/89/Flag_of_Yemen.svg'\n",
+        "}\n",
+        "\n",
+        "northAmerica_flags = {\n",
+        "    'Cuba': 'https://upload.wikimedia.org/wikipedia/commons/b/bd/Flag_of_Cuba.svg',\n",
+        "    'Dominican Republic': 'https://upload.wikimedia.org/wikipedia/commons/9/9f/Flag_of_the_Dominican_Republic.svg',\n",
+        "    'Haiti': 'https://upload.wikimedia.org/wikipedia/commons/5/56/Flag_of_Haiti.svg',\n",
+        "    'Costa Rica': 'https://upload.wikimedia.org/wikipedia/commons/b/bc/Flag_of_Costa_Rica.svg',\n",
+        "    'El Salvador': 'https://upload.wikimedia.org/wikipedia/commons/3/34/Flag_of_El_Salvador.svg',\n",
+        "    'Guatemala': 'https://upload.wikimedia.org/wikipedia/commons/e/ec/Flag_of_Guatemala.svg',\n",
+        "    'Honduras': 'https://upload.wikimedia.org/wikipedia/commons/8/82/Flag_of_Honduras.svg',\n",
+        "    'Jamaica': 'https://upload.wikimedia.org/wikipedia/commons/0/0a/Flag_of_Jamaica.svg',\n",
+        "    'Mexico': 'https://upload.wikimedia.org/wikipedia/commons/f/fc/Flag_of_Mexico.svg',\n",
+        "    'Nicaragua': 'https://upload.wikimedia.org/wikipedia/commons/1/19/Flag_of_Nicaragua.svg',\n",
+        "    'Panama': 'https://upload.wikimedia.org/wikipedia/commons/a/ab/Flag_of_Panama.svg'\n",
+        "}\n",
+        "\n",
+        "oceania_flags = {\n",
+        "    'Papua New Guinea': 'https://upload.wikimedia.org/wikipedia/commons/e/e3/Flag_of_Papua_New_Guinea.svg'\n",
+        "}\n",
+        "\n",
+        "southAmerica_flags = {\n",
+        "    'Brazil': 'https://upload.wikimedia.org/wikipedia/commons/0/05/Flag_of_Brazil.svg',\n",
+        "    'Ecuador': 'https://upload.wikimedia.org/wikipedia/commons/e/e8/Flag_of_Ecuador.svg',\n",
+        "    'Paraguay': 'https://upload.wikimedia.org/wikipedia/commons/2/27/Flag_of_Paraguay.svg',\n",
+        "    'Peru': 'https://upload.wikimedia.org/wikipedia/commons/c/cf/Flag_of_Peru.svg',\n",
+        "    'Colombia': 'https://upload.wikimedia.org/wikipedia/commons/2/21/Flag_of_Colombia.svg',\n",
+        "    'Guyana': 'https://upload.wikimedia.org/wikipedia/commons/9/99/Flag_of_Guyana.svg'\n",
+        "}"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Function to create a by year consumer / production slide chart per continent\n",
+        "def cons_prod_chart(continent, flags): \n",
+        "  # Select the hour column to slide on\n",
+        "  years = alt.selection_single(\n",
+        "      fields=['Year'],\n",
+        "      bind=alt.binding_range(min=1990, max=2018, step=1, name='Year'),\n",
+        "      init={'Year': 1990}\n",
+        "  )\n",
+        "\n",
+        "  # Define population\n",
+        "  population = continent['Avg Decade Population']\n",
+        "\n",
+        "  # adding in flag image\n",
+        "  continent['flag_url'] = continent['Country'].map(flags)\n",
+        "  \n",
+        "  # Normalize Total Production and Domestic Consumption\n",
+        "  continent['normalized_production'] = (continent['Total Production'] / population) * 1000000\n",
+        "  max_normalized_production = continent['normalized_production'].max()\n",
+        "  continent['normalized_consumption'] = (continent['Domestic Consumption'] / population) * 1000000\n",
+        "  max_normalized_consumption = continent['normalized_consumption'].max()\n",
+        "  max_population = continent['Density'].max()\n",
+        "\n",
+        "\n",
+        "  # Production vs Population\n",
+        "  production = alt.Chart(continent).mark_image(\n",
+        "      width=30,\n",
+        "      height=30\n",
+        "      ).encode(\n",
+        "      x=alt.X('normalized_production:Q',\n",
+        "              title='Total Production',\n",
+        "              scale=alt.Scale(domain=(-5, max_normalized_production))),\n",
+        "      y=alt.Y('Density:Q',\n",
+        "              title='Population Density',\n",
+        "              scale=alt.Scale(domain=(-5, max_population))),\n",
+        "      url='flag_url',\n",
+        "      tooltip=['Country',\n",
+        "              'Continent',\n",
+        "              'Total Production',\n",
+        "              'Domestic Consumption']\n",
+        "      ).properties(\n",
+        "          width=500,\n",
+        "          height=300,\n",
+        "          title={\n",
+        "              'text':'Normalized Population: Total Production vs Population Density',\n",
+        "              'subtitle':'Coffee Production per 1,000,000 People'}\n",
+        "      ).add_selection(\n",
+        "          years\n",
+        "      ).transform_filter(\n",
+        "          years\n",
+        "      ).interactive()\n",
+        "\n",
+        "\n",
+        "  # Consumption vs Population\n",
+        "  consumption = alt.Chart(continent).mark_image(\n",
+        "      width=30,\n",
+        "      height=30\n",
+        "  ).encode(\n",
+        "      x=alt.X('normalized_consumption:Q',\n",
+        "              title='Domestic Consumption',\n",
+        "              scale=alt.Scale(domain=(-5, max_normalized_consumption))),\n",
+        "      y=alt.Y('Density:Q',\n",
+        "              title='Population Density',\n",
+        "              scale=alt.Scale(domain=(-5, max_population))),\n",
+        "      url='flag_url',\n",
+        "      tooltip=['Country',\n",
+        "              'Continent',\n",
+        "              'Total Production',\n",
+        "              'Domestic Consumption']\n",
+        "      ).properties(\n",
+        "          width=500,\n",
+        "          height=300,\n",
+        "          title={\n",
+        "              'text':'Normalized Population: Domestic Consupmtion vs Population Density',\n",
+        "              'subtitle':'Coffee Consumption per 1,000,000 People'}\n",
+        "      ).add_selection(\n",
+        "          years\n",
+        "      ).transform_filter(\n",
+        "          years\n",
+        "      ).interactive()\n",
+        "\n",
+        "  return production | consumption"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Africa chart\n",
+        "cons_prod_chart(africa, africa_flags)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Asia chart\n",
+        "cons_prod_chart(asia, asia_flags)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# North America chart\n",
+        "cons_prod_chart(northAmerica, northAmerica_flags)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Oceania chart\n",
+        "cons_prod_chart(oceania, oceania_flags)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# South America chart\n",
+        "cons_prod_chart(southAmerica, southAmerica_flags)"
+      ]
     }
   ],
   "metadata": {
